# monadic_variant

./: .travis.yml  CMakeLists.txt  DEPS  README.md
include/avakar/: monadic_variant.h
src/: bad_variant_access.cpp  monadic_variant_impl.h
test/: mockobject.h  monadic_variant_test.cpp
